# OpenShell

./: .gitlab-ci.yml  dco-signatures.json
.github/: VOUCHED.td
architecture/: gateway-single-node.md  sandbox.md
crates/navigator-bootstrap/src/: image.rs
crates/openshell-bootstrap/src/: docker.rs  errors.rs  lib.rs  paths.rs
crates/openshell-cli/: Cargo.toml
crates/openshell-cli/src/: bootstrap.rs  main.rs  run.rs
crates/openshell-sandbox/src/: grpc_client.rs  lib.rs
crates/openshell-server/src/: grpc.rs
crates/openshell-vm/: Cargo.toml  build.rs
crates/openshell-vm/scripts/: build-rootfs.sh  gateway-init.sh
crates/openshell-vm/src/: ffi.rs  lib.rs
pr-preview/pr-195/: index.html  searchindex.js
pr-preview/pr-195/about/: get-started.html
pr-preview/pr-217/: index.html  index.json  search.html
pr-preview/pr-226/: index.json  searchindex.js
pr-preview/pr-240/: index.json  searchindex.js
pr-preview/pr-246/: index.json
pr-preview/pr-257/: index.json  searchindex.js
pr-preview/pr-272/: index.json  objects.inv  searchindex.js
pr-preview/pr-275/: index.json
pr-preview/pr-287/: index.html  index.json  search.html  searchindex.js
pr-preview/pr-294/: index.html  index.json  objects.inv  search.html  searchindex.js
pr-preview/pr-304/: index.html  index.json  objects.inv  search.html  searchindex.js
pr-preview/pr-353/: index.json  searchindex.js
pr-preview/pr-458/: index.json  searchindex.js
pr-preview/pr-474/: index.json  searchindex.js
proto/: openshell.proto
tasks/scripts/: docker-publish-multiarch.sh
(+399 files in other folders)
