# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "openshell-vm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "MicroVM runtime using libkrun for hardware-isolated execution"

[lib]
name = "openshell_vm"
path = "src/lib.rs"

[dependencies]
libc = "0.2"
miette = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
